gccida/c3/verbatim
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1816:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v1; // rbx 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1823:1: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
output_buffer_0 *v8; // rbx 
^~~~~~~~~~~~~~~
output_buffer
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1835:18: error: expected expression
v16 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1835:10: error: use of undeclared identifier '_OWORD'
v16 = *( _OWORD *)&diagnostic_buffer->state.diagnostic_count[4]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1836:17: error: expected expression
v2 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1836:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&diagnostic_buffer->state.prefix; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1837:17: error: expected expression
v3 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1837:9: error: use of undeclared identifier '_OWORD'
v3 = *( _OWORD *)&diagnostic_buffer->state.indent_skip; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1838:17: error: expected expression
v4 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
                ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1838:9: error: use of undeclared identifier '_OWORD'
v4 = *( _OWORD *)&diagnostic_buffer->state.cursor; 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1839:18: error: expected expression
v15 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1839:10: error: use of undeclared identifier '_OWORD'
v15 = *( _OWORD *)diagnostic_buffer->state.diagnostic_count; 
         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1843:12: error: expected expression
*( _OWORD *)&diagnostic_buffer->state.prefix = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1843:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&diagnostic_buffer->state.prefix = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1846:38: error: expected expression
v1->state.format_args = ( va_list_0 *)va; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1846:27: error: use of undeclared identifier 'va_list_0'
v1->state.format_args = ( va_list_0 *)va; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1848:12: error: expected expression
*( _OWORD *)&v1->state.diagnostic_count[4] = v16; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1848:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v1->state.diagnostic_count[4] = v16; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/diagnostic.c:1852:12: error: expected expression
*( _OWORD *)v1->state.diagnostic_count = v15; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/verbatim/src/obj/diagnostic.o] Error 1
